[package]
name = "sac_club_scraper"
version = "0.1.0"
edition = "2021"
authors = ["Garrett Ladley"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.24"
voca_rs = "1.15.2"
rand = "0.8.5"
once_cell = "1.8.0"
lipsum = "0.9.0"
chrono = "0.4.19"
uuid = { version = "1.7.0", features = ["v4"] }
